add DELETE /v1/me/token
